--- a/src/CutMp3.WebApp/Client/CutMp3.WebApp.Client.csproj
+++ b/src/CutMp3.WebApp/Client/CutMp3.WebApp.Client.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CutMp3.Domain\CutMp3.Domain.csproj" />
     <ProjectReference Include="..\Shared\CutMp3.WebApp.Shared.csproj" />
   </ItemGroup>
 
