--- a/src/CutMp3.Console/CutMp3.UIConsole.csproj
+++ b/src/CutMp3.Console/CutMp3.UIConsole.csproj
@@ -8,9 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediaToolkit" Version="1.1.0.1" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
-    <PackageReference Include="VideoLibrary" Version="3.1.2" />
+    <ProjectReference Include="..\CutMp3.Application\CutMp3.Application.csproj" />
   </ItemGroup>
 
 </Project>
