download video from youtube

--- a/src/CutMp3.WebApp/Server/CutMp3.WebApp.Server.csproj
+++ b/src/CutMp3.WebApp/Server/CutMp3.WebApp.Server.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CutMp3.Application\CutMp3.Application.csproj" />
     <ProjectReference Include="..\Client\CutMp3.WebApp.Client.csproj" />
     <ProjectReference Include="..\Shared\CutMp3.WebApp.Shared.csproj" />
   </ItemGroup>
