--- a/src/CutMp3.Application/CutMp3.Application.csproj
+++ b/src/CutMp3.Application/CutMp3.Application.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediaToolkit" Version="1.1.0.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="VideoLibrary" Version="3.1.2" />
   </ItemGroup>
 
