--- a/src/CutMp3.Console/CutMp3.UIConsole.csproj
+++ b/src/CutMp3.Console/CutMp3.UIConsole.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediaToolkit" Version="1.1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CutMp3.Application\CutMp3.Application.csproj" />
   </ItemGroup>
 
