--- a/src/CutMp3.Console/CutMp3.UIConsole.csproj
+++ b/src/CutMp3.Console/CutMp3.UIConsole.csproj
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="MediaToolkit" Version="1.1.0.1" />
+    <PackageReference Include="NAudio.Asio" Version="2.0.0" />
+    <PackageReference Include="NAudio.Core" Version="2.0.0" />
+    <PackageReference Include="NAudio.Midi" Version="2.0.1" />
+    <PackageReference Include="NAudio.Wasapi" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
