--- a/src/CutMp3.WebApp/Client/CutMp3.WebApp.Client.csproj
+++ b/src/CutMp3.WebApp/Client/CutMp3.WebApp.Client.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <BlazorEnableCompression>false</BlazorEnableCompression>
   </PropertyGroup>
 
   <ItemGroup>
